admin login구현, admin create(하드코딩) 끝

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,12 @@ dependencies {
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 
+	compile("org.springframework.boot:spring-boot-starter-security")
+	compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.1.1'
+	compile('org.springframework.boot:spring-boot-starter-jdbc')
+	compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.5.4'
+
+
 }
 
 test {
