--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ kafka.listener.service.minBatchSize=10
 i.want.to.sleep=10
 
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/test
+
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3308/login
+spring.datasource.username=jimin
+spring.datasource.password=jimin
+
