블록체인과 주고받기까지구현해벌임

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.datasource.url=jdbc:mariadb://127.0.0.1:3308/login
 spring.datasource.username=jimin
 spring.datasource.password=jimin
 
+server.port=8081
