--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ dependencies {
 	compile group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.1.1'
 	compile('org.springframework.boot:spring-boot-starter-jdbc')
 	compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.5.4'
+	compile 'org.springframework.boot:spring-boot-starter-webflux' //webclient
+	compile 'org.projectreactor:reactor-spring:1.0.1.RELEASE' //webclient
 
 
 }
