--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ batch.size=4096
 linger.ms=1
 buffer.memory=40960
 
-kafka.listener.service.topic=Lee1
+kafka.listener.service.topic=jimin-test1
 kafka.listener.service.minBatchSize=10
 
 i.want.to.sleep=10
@@ -17,4 +17,4 @@ spring.datasource.url=jdbc:mariadb://127.0.0.1:3308/login
 spring.datasource.username=jimin
 spring.datasource.password=jimin
 
-server.port=8081
+server.port=8081  
