react와 spring boot 연동, 마이페이지, 로그인 페이지 생성(미완성)

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,11 @@ plugins {
 	id 'org.springframework.boot' version '2.2.3.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
+
+	id "com.moowork.node" version "1.3.1"
 }
+
+apply plugin: "com.moowork.node"
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -47,6 +51,7 @@ dependencies {
 	compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.5.4'
 	compile 'org.springframework.boot:spring-boot-starter-webflux' //webclient
 	compile 'org.projectreactor:reactor-spring:1.0.1.RELEASE' //webclient
+	compile group: 'org.springframework.ws', name: 'spring-ws', version: '3.0.8.RELEASE', ext: 'pom' //web-service
 
 
 }
@@ -54,3 +59,21 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+
+
+def webappDir = "$projectDir/frontend/my-app"
+
+task appNpmInstall(type: NpmTask) {
+	workingDir = file("${webappDir}")
+	args = ["run", "build"]
+}
+
+task copyWebApp(type: Copy) {
+	from 'frontend/my-app/build'
+	into "build/resources/main/static"
+//    into "src/main/resources/static"
+}
+
+copyWebApp.dependsOn(appNpmInstall)
+compileJava.dependsOn(copyWebApp)
